# openArchv

./: PRIVACY.md  README.md  index.html  openArchv.pkg  package-lock.json  package.json  pnpm-lock.yaml
src/: App.css  App.jsx  README.md
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/entitlements/: child.plist  openArchv_AppStore.provisionprofile  parent.plist
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
