[package]
name = "openarchv"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "openarchv_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
# 🔒 Devtools are completely stripped from production builds by leaving this empty
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
zip = "0.6"
open = "5.3"
tauri-plugin-dialog = "2.0"
compress-tools = { version = "0.15", features = ["static"] }

# 🛠️ HARDENING LAYER: Only inject devtools (Inspect Element capabilities) when compiling target debug profiles
[target.'cfg(debug_assertions)'.dependencies]
tauri = { version = "2", features = ["devtools"] }
